welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:3: error: reassignment to val
if(estSurBiscuit) {x=x+1}}
                    ^